--- a/app/views/abfragen/index.html.erb
+++ b/app/views/abfragen/index.html.erb
@@ -2,11 +2,29 @@
 
 <%= form_tag({action: :show}, multipart: true) do %>
 
-  <%= render "auswahl_panel", typ: "Stoff", auswahl: @stoff_auswahl %>
+  <div class="row">
+    <div class="col-sm-4">
+      <%= render "zeit_auswahl_panel" %>
+      <%= render "auswahl_panel", typ: "Verkehrsträger", auswahl: VERKEHRSTRAEGER_COMBOBOX %>
+    </div>
+    <div class="col-sm-4">
+      <%= render "auswahl_panel", typ: "Stoff", auswahl: @stoff_auswahl %>
+    </div>
+    <div class="col-sm-4">
+       <%= submit_tag "Passende Transporte anzeigen" %>
+    </div>
+  </div>
   
-  <%= render "auswahl_panel", typ: "Start-Anlage", auswahl: @start_anlagen %>
+  <%= render "anlagen_auswahl_panel", typ_kategorie: "start_kategorie",
+                                      typ: "Start", 
+                                      anlagen_auswahl: @start_anlagen,
+                                      anlagen_kategorien: @anlagen_kategorien %>
   
-  <%= render "auswahl_panel", typ: "Ziel-Anlage", auswahl: @ziel_anlagen %>
+  <%= render "anlagen_auswahl_panel", typ_kategorie: "ziel_kategorie", 
+                                      typ: "Ziel", 
+                                      anlagen_auswahl: @ziel_anlagen,
+                                      anlagen_kategorien: @anlagen_kategorien %>
+                                      
 
-   <%= submit_tag "Passende Transporte anzeigen" %>
+  
 <% end %>
