deutsche Bezeichnungen an einigen Stellen
mehr Einheitlichkeit (z.B. "New transport" => "Neuer Transport")

--- a/app/views/firmen/_form.html.erb
+++ b/app/views/firmen/_form.html.erb
@@ -32,6 +32,6 @@
     <%= f.text_area :beschreibung %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Firma erstellen" %>
   </div>
 <% end %>
