--- a/app/views/stoffe/_form.html.erb
+++ b/app/views/stoffe/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.text_field :gefahr_nummer %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Stoff erstellen" %>
   </div>
 <% end %>
