--- a/app/views/anlagen/_form.html.erb
+++ b/app/views/anlagen/_form.html.erb
@@ -73,26 +73,9 @@
         </div>
         
         <div id="map" style="height: 300px;"></div>
+        <!-- Javascript im Ordner app/assets/javascripts ablegen -->
         <script>
-          var lat, lon;
-          if(document.getElementById('anlage_lat').value) {
-            lat = document.getElementById('anlage_lat').value;
-            lon = document.getElementById('anlage_lon').value;
-          }
-          else {
-            lat = 52.2152;
-            lon = 7.0793
-          }
-          var map = L.map('map', {attributionControl: false}).setView([lat, lon], 7);
-          var marker = L.marker([lat, lon]).addTo(map);
-          L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-          map.on('click', function(e) {
-            marker.setLatLng(e.latlng);
-            map.panTo(e.latlng);
-            
-            document.getElementById('anlage_lat').value = e.latlng.lat.toFixed(6);
-            document.getElementById('anlage_lon').value = e.latlng.lng.toFixed(6);
-          });
+          geomap('anlage');
         </script>
         
       </div>
