--- a/app/views/beobachtungen/show.html.erb
+++ b/app/views/beobachtungen/show.html.erb
@@ -1,9 +1,160 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Beschreibung:</strong>
-  <%= @beobachtung.beschreibung %>
+  <strong>Ankunft zeit:</strong>
+  <%= @beobachtung.ankunft_zeit %>
+</p>
+
+<p>
+  <strong>Abfahrt zeit:</strong>
+  <%= @beobachtung.abfahrt_zeit %>
+</p>
+
+<p>
+  <strong>Start datum:</strong>
+  <%= @beobachtung.start_datum %>
+</p>
+
+<p>
+  <strong>End datum:</strong>
+  <%= @beobachtung.end_datum %>
+</p>
+
+<p>
+  <strong>Ort:</strong>
+  <%= @beobachtung.ort %>
+</p>
+
+<p>
+  <strong>Lat:</strong>
+  <%= @beobachtung.lat %>
+</p>
+
+<p>
+  <strong>Lon:</strong>
+  <%= @beobachtung.lon %>
+</p>
+
+<p>
+  <strong>Fahrtrichtung:</strong>
+  <%= @beobachtung.fahrtrichtung %>
+</p>
+
+<p>
+  <strong>Verkehrstraeger:</strong>
+  <%= @beobachtung.verkehrstraeger %>
+</p>
+
+<p>
+  <strong>Kennzeichen radioaktiv:</strong>
+  <%= @beobachtung.kennzeichen_radioaktiv %>
+</p>
+
+<p>
+  <strong>Kennzeichen aetzend:</strong>
+  <%= @beobachtung.kennzeichen_aetzend %>
+</p>
+
+<p>
+  <strong>Kennzeichen spaltbar:</strong>
+  <%= @beobachtung.kennzeichen_spaltbar %>
+</p>
+
+<p>
+  <strong>Kennzeichen umweltgefaehrend:</strong>
+  <%= @beobachtung.kennzeichen_umweltgefaehrend %>
+</p>
+
+<p>
+  <strong>Gefahr nummer:</strong>
+  <%= @beobachtung.gefahr_nummer %>
+</p>
+
+<p>
+  <strong>Un nummer:</strong>
+  <%= @beobachtung.un_nummer %>
+</p>
+
+<p>
+  <strong>Firma:</strong>
+  <%= @beobachtung.firma_id %>
+</p>
+
+<p>
+  <strong>Firma beschreibung:</strong>
+  <%= @beobachtung.firma_beschreibung %>
+</p>
+
+<p>
+  <strong>Lok farbe:</strong>
+  <%= @beobachtung.lok_farbe %>
+</p>
+
+<p>
+  <strong>Container beschreibung:</strong>
+  <%= @beobachtung.container_beschreibung %>
+</p>
+
+<p>
+  <strong>Anzahl container:</strong>
+  <%= @beobachtung.anzahl_container %>
+</p>
+
+<p>
+  <strong>Zug beschreibung:</strong>
+  <%= @beobachtung.zug_beschreibung %>
+</p>
+
+<p>
+  <strong>Anzahl lkw:</strong>
+  <%= @beobachtung.anzahl_lkw %>
+</p>
+
+<p>
+  <strong>Kennzeichen lkw:</strong>
+  <%= @beobachtung.kennzeichen_lkw %>
+</p>
+
+<p>
+  <strong>Lkw beschreibung:</strong>
+  <%= @beobachtung.lkw_beschreibung %>
+</p>
+
+<p>
+  <strong>Schiff name:</strong>
+  <%= @beobachtung.schiff_name %>
+</p>
+
+<p>
+  <strong>Schiff beschreibung:</strong>
+  <%= @beobachtung.schiff_beschreibung %>
+</p>
+
+<p>
+  <strong>Polizei:</strong>
+  <%= @beobachtung.polizei %>
+</p>
+
+<p>
+  <strong>Hubschrauber:</strong>
+  <%= @beobachtung.hubschrauber %>
+</p>
+
+<p>
+  <strong>Foto:</strong>
+  <%= @beobachtung.foto %>
+</p>
+
+<p>
+  <strong>Quelle:</strong>
+  <%= @beobachtung.quelle %>
+</p>
+
+<p>
+  <strong>Email:</strong>
+  <%= @beobachtung.email %>
 </p>
 
 <%= link_to 'Edit', edit_beobachtung_path(@beobachtung) %> |
 <%= link_to 'Back', beobachtungen_path %>
+
