--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -10,12 +10,204 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :beschreibung %><br>
-    <%= f.text_area :beschreibung %>
+  
+  
+  <div class="panel panel-default" id="mapedit" >
+    <div class="panel-heading">
+          <h2 class="panel-title">Eckdaten</h2>
+    </div>
+    <div class="panel-body">
+			
+			<div class="row">
+				<div class="col-sm-6">
+					
+			    <div class="form-group">
+            <%= f.label :ort %><br>
+            <%= f.text_field :ort %>
+          </div>
+  
+          <div class="form-group">
+            Fahrtrichtung des Transports:
+            <%= f.text_field :fahrtrichtung %>
+          </div>
+					
+					<div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                Datum der Sichtung: 
+                <%= f.text_field :start_datum %>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                Ankunftszeit:
+                <%= f.time_select :ankunft_zeit %>
+              </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-sm-6">
+               <div class="form-group">
+                Abfahrtsdatum:
+                <%= f.text_field :end_datum %>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                Abfahrtszeit:
+                <%= f.time_select :abfahrt_zeit %>
+              </div>
+            </div>
+        </div>
+					
+					
+				</div>
+				<div class="col-sm-5">
+          <p>Klicke auf die Karte, um den Standort genau festzulegen.</p>
+          <input type="text" name="search" placeholder="Hier zukünftig suchen" id="search" class="form-control">
+            <%= f.hidden_field :lat, class: "form-control" %>
+            <%= f.hidden_field :lon, class: "form-control" %>
+            
+          <div id="map" style="height: 300px;"></div>
+          <script>
+            geomap('beobachtung');
+          </script> 
+        </div>
+      </div>
+    </div>
+        
+        
+        
   </div>
-  <div class="actions">
-    <%= f.submit %>
+       
+  <div class="panel panel-default" id="mapedit" >
+    <div class="panel-heading">
+          <h2 class="panel-title">Kennzeichnung</h2>
+    </div>    
+    <div class="panel-body">   
+        <div class="field">
+          <%= f.label :kennzeichen_radioaktiv %><br>
+          <%= f.check_box :kennzeichen_radioaktiv %>
+        </div>
+        <div class="field">
+          <%= f.label :kennzeichen_aetzend %><br>
+          <%= f.check_box :kennzeichen_aetzend %>
+        </div>
+        <div class="field">
+          <%= f.label :kennzeichen_spaltbar %><br>
+          <%= f.check_box :kennzeichen_spaltbar %>
+        </div>
+        <div class="field">
+          <%= f.label :kennzeichen_umweltgefaehrdend %><br>
+          <%= f.check_box :kennzeichen_umweltgefaehrdend %>
+        </div>
+        <div class="field">
+          <%= f.label :gefahr_nummer %><br>
+          <%= f.text_field :gefahr_nummer %>
+        </div>
+        <div class="field">
+          <%= f.label :un_nummer %><br>
+          <%= f.text_field :un_nummer %>
+        </div>
+    </div>   
   </div>
+  
+  <div class="panel panel-default" >
+    <div class="panel-heading">
+          <h2 class="panel-title">Verkehrsmittel</h2>
+    </div>    
+    <div class="panel-body"> 
+      <div class="field">
+          Verkehrsmittel: 
+          <%= f.select :verkehrstraeger, options_for_select(VERKEHRSTRAEGER_COMBOBOX) %>
+          Nach der Auswahl soll sich der nächste Teil jeweils anpassen. 
+          (Javascript entsprechend schreiben mit ein und Ausblenden je nach Auswahl)
+      </div>
+    </div>
+  </div>
+  
+  <div class="panel panel-default" >
+    <div class="panel-heading">
+          <h2 class="panel-title">Beschreibung</h2>
+    </div>    
+    <div class="panel-body"> 
+        <div class="form-group">
+          Beschreibung der Container / Ladung:<br>
+          <%= f.text_area :container_beschreibung %>
+        </div>
+        <div class="field">
+          <%= f.label :anzahl_container %><br>
+          <%= f.number_field :anzahl_container %>
+        </div>
+        
+       
+        <div class="beobachtung_zug">
+					<div class="field">
+						<%= f.label :lok_beschreibung %><br>
+						<%= f.text_field :lok_beschreibung %>
+					</div>
+			  </div>
+        
+        
+        <div class="beobachtung_zug">
+          <div class="field">
+            <%= f.label :zug_beschreibung %><br>
+            <%= f.text_area :zug_beschreibung %>
+          </div>
+        </div>
+        <div class="beobachtung_lkw">
+          <div class="field">
+            <%= f.label :anzahl_lkw %><br>
+            <%= f.number_field :anzahl_lkw %>
+          </div>
+          <div class="field">
+            <%= f.label :kennzeichen_lkw %><br>
+            <%= f.text_field :kennzeichen_lkw %>
+          </div>
+          <div class="field">
+            <%= f.label :lkw_beschreibung %><br>
+            <%= f.text_area :lkw_beschreibung %>
+          </div>
+        </div>
+        <div class="beobachtung_schiff">
+          <div class="field">
+            <%= f.label :schiff_name %><br>
+            <%= f.text_field :schiff_name %>
+          </div>
+          <div class="field">
+            <%= f.label :schiff_beschreibung %><br>
+            <%= f.text_area :schiff_beschreibung %>
+          </div>
+        </div>
+        
+        <div class="form-group">
+          Transportfirma (Aufschrift der Reederei, Spedition, Bahnunternehmen):<br>
+          <%= f.text_field :firma_beschreibung %>
+        </div>
+      </div>
+  </div>
+        
+  <div class="panel panel-default" >
+    <div class="panel-heading">
+          <h2 class="panel-title">Begleitumstände</h2>
+    </div>    
+    <div class="panel-body">     
+        <div class="field">     
+          <%= f.check_box :polizei %><%= f.label :polizei %>
+        </div>
+        <div class="field">
+          <%= f.check_box :hubschrauber %><%= f.label :hubschrauber %>
+        </div>
+        <div class="field">
+          <%= f.check_box :foto %> Foto gemacht? (Hochladen ermöglichen)
+        </div>
+        <div class="field">
+          E-Mail-Adresse für Nachfragen:
+          <%= f.text_field :email %>
+        </div>
+    </div>
+  </div>
+        <div class="actions">
+          <%= f.submit %>
+        </div>
 <% end %>
