--- a/app/views/beobachtungen/index.html.erb
+++ b/app/views/beobachtungen/index.html.erb
@@ -7,7 +7,8 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Beschreibung</th>
+      <th>Datum</th>
+      <th>Ort</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +16,8 @@
   <tbody>
     <% @beobachtungen.each do |beobachtung| %>
       <tr>
-        <td><%= beobachtung.beschreibung %></td>
+        <td><%= beobachtung.start_datum.to_formatted_s(:dmy)   %></td>
+        <td><%= beobachtung.ort %></td>
         <td><%= link_to 'Show', beobachtung %></td>
         <td><%= link_to 'Bearbeiten', edit_beobachtung_path(beobachtung) %></td>
         <td><%= link_to 'Löschen', beobachtung, method: :delete, data: { confirm: 'Are you sure?' } %></td>
