--- a/app/views/beobachtungen/show.html.erb
+++ b/app/views/beobachtungen/show.html.erb
@@ -1,152 +1,169 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Ankunft zeit:</strong>
-  <%= @beobachtung.ankunft_zeit %>
-</p>
+<h2>Beobachtung aus <%= @beobachtung.ort %></h2>
+<div class="panel panel-default" id="mapedit" >
+    <div class="panel-heading">
+          <h2 class="panel-title">Eckdaten</h2>
+    </div>
+    <div class="panel-body">
+			<div class="row">
+        
+        <div class="col-sm-7">
+          <p>
+            <strong>Beobachtungs- / Ankunftszeit:</strong>
+            <%= @beobachtung.ankunft_zeit.to_formatted_s(:dmyz) %>
+          </p>
+          
+          <p>
+            <strong>Abfahrtszeit:</strong>
+            <%= @beobachtung.abfahrt_zeit.to_formatted_s(:dmyz) %>
+          </p>
+          
+          <p>
+            <strong>Ort:</strong>
+            <%= @beobachtung.ort %>
+          </p>
+          
+          <p>
+            <strong>Fahrtrichtung:</strong>
+            <%= @beobachtung.fahrtrichtung %>
+          </p>
+          
+          <p>
+            <strong>Quelle:</strong>
+            <%= @beobachtung.quelle %>
+          </p>
 
-<p>
-  <strong>Abfahrt zeit:</strong>
-  <%= @beobachtung.abfahrt_zeit %>
-</p>
+          <p>
+            <strong>Email:</strong>
+            <%= @beobachtung.email %>
+          </p>
+          
+        </div>
+        
+        <div class="col-sm-5">
+          <% if @beobachtung.lat? && @beobachtung.lon? %>
+            <div id="map" style="height:200px;"></div>
+            <%= map(:center => { :latlng => [@beobachtung.lat, @beobachtung.lon], :zoom => 10 }) %>
+          <% end %>
+        </div>
+            
+      </div>
+    </div>
+</div>
+ 
+<div class="panel panel-default" id="mapedit" >
+    <div class="panel-heading">
+      <h2 class="panel-title">Beschreibung</h2>
+    </div>
+    <div class="panel-body">
+			<div class="row">
+        
+        <div class="col-sm-6">
+          <p>
+            <strong>Verkehrstraeger:</strong>
+            <%= @beobachtung.verkehrstraeger %>
+          </p>
+          <p>
+            <strong>Container beschreibung:</strong>
+            <%= @beobachtung.container_beschreibung %>
+          </p>
 
-<p>
-  <strong>Start datum:</strong>
-  <%= @beobachtung.start_datum %>
-</p>
+          <p>
+            <strong>Anzahl container:</strong>
+            <%= @beobachtung.anzahl_container %>
+          </p>
 
-<p>
-  <strong>End datum:</strong>
-  <%= @beobachtung.end_datum %>
-</p>
+          <% case @beobachtung.verkehrstraeger %>
+          <% when "LKW" then %>
+            <p>
+              <strong>Anzahl lkw:</strong>
+              <%= @beobachtung.anzahl_lkw %>
+            </p>
+            
+            <p>
+              <strong>Kennzeichen lkw:</strong>
+              <%= @beobachtung.kennzeichen_lkw %>
+            </p>
+            
+            <p>
+              <strong>Lkw beschreibung:</strong>
+              <%= @beobachtung.lkw_beschreibung %>
+            </p>
 
-<p>
-  <strong>Ort:</strong>
-  <%= @beobachtung.ort %>
-</p>
-
-<p>
-  <strong>Lat:</strong>
-  <%= @beobachtung.lat %>
-</p>
-
-<p>
-  <strong>Lon:</strong>
-  <%= @beobachtung.lon %>
-</p>
-
-<p>
-  <strong>Fahrtrichtung:</strong>
-  <%= @beobachtung.fahrtrichtung %>
-</p>
-
-<p>
-  <strong>Verkehrstraeger:</strong>
-  <%= @beobachtung.verkehrstraeger %>
-</p>
-
-<h3> Kennzeichnung: </h3>
-
-<%= render "stoffe/gefahr_tafel", gefahr_nummer: @beobachtung.gefahr_nummer, un_nummer: @beobachtung.un_nummer %>
-
-
-<% if @beobachtung.kennzeichen_radioaktiv %>
-  <%= image_tag "radioaktiv.jpg", alt: "radioaktiv", size: "70x70" %>
-<% end %>
-
-<% if @beobachtung.kennzeichen_aetzend %>
-  <%= image_tag "aetzend.jpg", alt: "ätzend", size: "70x70" %>
-<% end %>
-
-<% if @beobachtung.kennzeichen_spaltbar %>
-  <%= image_tag "spaltbar.jpg", alt: "spaltbar", size: "70x70" %>
-<% end %>
-
-<% if @beobachtung.kennzeichen_umweltgefaehrdend %>
-  <%= image_tag "umweltgefaehrdend.jpg", alt: "umweltgefährdend", size: "70x70" %>
-<% end %>
-
-
-
-<p>
-  <strong>Container beschreibung:</strong>
-  <%= @beobachtung.container_beschreibung %>
-</p>
-
-<p>
-  <strong>Anzahl container:</strong>
-  <%= @beobachtung.anzahl_container %>
-</p>
-
-<% case @beobachtung.verkehrstraeger %>
-<% when "LKW" then %>
-  <p>
-    <strong>Anzahl lkw:</strong>
-    <%= @beobachtung.anzahl_lkw %>
-  </p>
-  
-  <p>
-    <strong>Kennzeichen lkw:</strong>
-    <%= @beobachtung.kennzeichen_lkw %>
-  </p>
-  
-  <p>
-    <strong>Lkw beschreibung:</strong>
-    <%= @beobachtung.lkw_beschreibung %>
-  </p>
-
-<% when "Zug" then %>
-  <p>
-    <strong>Lok Beschreibung:</strong>
-    <%= @beobachtung.lok_beschreibung %>
-  </p>
-  <p>
-    <strong>Zug beschreibung:</strong>
-    <%= @beobachtung.zug_beschreibung %>
-  </p>
-<% when "Schiff" then %>
-  <p>
-    <strong>Schiff name:</strong>
-    <%= @beobachtung.schiff_name %>
-  </p>
-  
-  <p>
-    <strong>Schiff beschreibung:</strong>
-    <%= @beobachtung.schiff_beschreibung %>
-  </p>
-<% end %>
+          <% when "Zug" then %>
+            <p>
+              <strong>Lok Beschreibung:</strong>
+              <%= @beobachtung.lok_beschreibung %>
+            </p>
+            <p>
+              <strong>Zug beschreibung:</strong>
+              <%= @beobachtung.zug_beschreibung %>
+            </p>
+          <% when "Schiff" then %>
+            <p>
+              <strong>Schiff name:</strong>
+              <%= @beobachtung.schiff_name %>
+            </p>
+            
+            <p>
+              <strong>Schiff beschreibung:</strong>
+              <%= @beobachtung.schiff_beschreibung %>
+            </p>
+          <% end %>
 
 
-<p>
-  <strong>Firma beschreibung:</strong>
-  <%= @beobachtung.firma_beschreibung %>
-</p>
+          <p>
+            <strong>Firma beschreibung:</strong>
+            <%= @beobachtung.firma_beschreibung %>
+          </p>
+          
+          <p>
+            <strong>Bewachung:</strong>
+            <% if @beobachtung.polizei %>
+              Mit Polizeibegleitung.
+            <% end %>
+            <% if @beobachtung.hubschrauber %>
+              Mit Hubschrauber begleitet.
+            <% end %>
+          </p>
 
+        </div>
+        
+        <div class="col-sm-6">
+          <h4>Kennzeichnung: </h4>
+          <%= render "stoffe/gefahr_tafel", gefahr_nummer: @beobachtung.gefahr_nummer, un_nummer: @beobachtung.un_nummer %>
 
-<p>
-  <strong>Polizei:</strong>
-  <%= @beobachtung.polizei %>
-</p>
+          <% if @beobachtung.kennzeichen_radioaktiv %>
+            <%= image_tag "radioaktiv.jpg", alt: "radioaktiv", size: "70x70" %>
+          <% end %>
 
-<p>
-  <strong>Hubschrauber:</strong>
-  <%= @beobachtung.hubschrauber %>
-</p>
+          <% if @beobachtung.kennzeichen_aetzend %>
+            <%= image_tag "aetzend.jpg", alt: "ätzend", size: "70x70" %>
+          <% end %>
 
-<p>
-  <strong>Foto:</strong>
-  <%= @beobachtung.foto %>
-</p>
+          <% if @beobachtung.kennzeichen_spaltbar %>
+            <%= image_tag "spaltbar.jpg", alt: "spaltbar", size: "70x70" %>
+          <% end %>
 
-<p>
-  <strong>Quelle:</strong>
-  <%= @beobachtung.quelle %>
-</p>
+          <% if @beobachtung.kennzeichen_umweltgefaehrdend %>
+            <%= image_tag "umweltgefaehrdend.jpg", alt: "umweltgefährdend", size: "70x70" %>
+          <% end %>
+          
+          <h4>Foto:</h4>
+          <p>
+            <strong>Foto:</strong>
+            <%= @beobachtung.foto %>
+          </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @beobachtung.email %>
-</p>
+        </div>
+        
+      </div>
+    </div>
+</div>
+
+<h3>Mögliche Transportabschnitte:</h3>
+
 
 <%= link_to 'Edit', edit_beobachtung_path(@beobachtung) %> |
 <%= link_to 'Back', beobachtungen_path %>
