--- a/app/views/transporte/show.html.erb
+++ b/app/views/transporte/show.html.erb
@@ -7,7 +7,7 @@
 <p id="notice"><%= notice %></p>
 
 
-<%= render "show_transport_grunddaten" %>
+<%= render "show_transport_grunddaten", transport: @transport %>
 
 
 <h3> Transportabschnitte </h3>
