--- a/app/views/beobachtungen/show.html.erb
+++ b/app/views/beobachtungen/show.html.erb
@@ -1,6 +1,14 @@
-<p id="notice"><%= notice %></p>
+<div class="btn-group header-buttons">
+  <%= link_to 'Alle Beobachtungen', beobachtungen_path, class: "btn btn-primary" %>
+  <%= link_to 'Bearbeiten', edit_beobachtung_path(@beobachtung), class: "btn btn-primary" %>
+  <%= link_to 'Löschen', @beobachtung, method: :delete, data: { confirm: 'Willst du die Beobachtung wirklich löschen?' }, class: "btn btn-danger" %></td>
+</div>
 
 <h2>Beobachtung aus <%= @beobachtung.ort %></h2>
+
+<p id="notice"><%= notice %></p>
+
+
 <div class="panel panel-default" id="mapedit" >
     <div class="panel-heading">
           <h2 class="panel-title">Eckdaten</h2>
@@ -162,9 +170,45 @@
     </div>
 </div>
 
-<h3>Mögliche Transportabschnitte:</h3>
+<% if @beobachtung.transportabschnitt %>
+  <h3>Zugeordneter Transport</h3>
+  <% if @beobachtung.transportabschnitt.transport %>
+    <h4>Transportdaten</h4>
+    <%= render "transporte/show_transport_grunddaten", transport: @beobachtung.transportabschnitt.transport %>
+  <% end %>
+  <h4>Transportabschnitt</h4>
+  <%= render "transportabschnitte/show_abschnitt", :abschnitt => @beobachtung.transportabschnitt  %>
 
+  
+<% else %>
 
-<%= link_to 'Edit', edit_beobachtung_path(@beobachtung) %> |
-<%= link_to 'Back', beobachtungen_path %>
+  <h3>Mögliche Transportabschnitte:</h3>
 
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Startdatum</th>
+          <th>Endatum</th>
+          <th>Start</th>
+          <th>Ziel</th>
+          <th>Stoff</th>
+          <th colspan="2"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @transportabschnitte.each do |transportabschnitt| %>
+          <tr>
+            <td> <%= transportabschnitt.start_datum %></td>
+            <td> <%= transportabschnitt.end_datum %></td>
+            <td> <%= transportabschnitt.start_ort %></td>
+            <td> <%= transportabschnitt.end_ort %></td>
+            <td> <%= transportabschnitt.transport ? transportabschnitt.transport.stoff : nil %></td>
+            <td><%= link_to 'Show', transportabschnitt %></td>
+            <td><%= link_to 'Zuordnen', abschnitt_zuordnen_beobachtung_path(@beobachtung, abschnitt: transportabschnitt.id) %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  
+<% end %>
