--- a/app/views/transportabschnitte/index.html.erb
+++ b/app/views/transportabschnitte/index.html.erb
@@ -1,8 +1,13 @@
 <h1>Listing transportabschnitte</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
+      <th>Startdatum</th>
+      <th>Endatum</th>
+      <th>Start</th>
+      <th>Ziel</th>
+      <th>Stoff</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -10,6 +15,11 @@
   <tbody>
     <% @transportabschnitte.each do |transportabschnitt| %>
       <tr>
+        <td> <%= transportabschnitt.start_datum %></td>
+        <td> <%= transportabschnitt.end_datum %></td>
+        <td> <%= transportabschnitt.start_ort %></td>
+        <td> <%= transportabschnitt.end_ort %></td>
+        <td> <%= transportabschnitt.transport ? transportabschnitt.transport.stoff : nil %></td>
         <td><%= link_to 'Show', transportabschnitt %></td>
         <td><%= link_to 'Edit', edit_transportabschnitt_path(transportabschnitt) %></td>
         <td><%= link_to 'Destroy', transportabschnitt, method: :delete, data: { confirm: 'Are you sure?' } %></td>
