--- a/app/views/transportabschnitte/show.html.erb
+++ b/app/views/transportabschnitte/show.html.erb
@@ -9,7 +9,7 @@
     <div class="btn-group header-buttons">
       <%= link_to 'Zur Transport-Anzeige', @transport , class: "btn btn-primary" %>  
     </div>
-  <%= render "transporte/show_transport_grunddaten" %>
+  <%= render "transporte/show_transport_grunddaten", transport: @transport %>
 <% end %>
 
 <h3> Transportabschnitt </h3>
