Transportabschnitt bei Beobachtung erstellen

--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -41,7 +41,7 @@
             
               <div class="form-group">
                 Abfahrtszeit:
-                <%= f.datetime_select :abfahrt_zeit %>
+                <%= f.datetime_select :abfahrt_zeit, start_year:1990 %>
               </div>
             
        
