Beobachtungszuordnung verbessert, fixed #14

--- a/app/views/beobachtungen/show.html.erb
+++ b/app/views/beobachtungen/show.html.erb
@@ -8,216 +8,12 @@
 
 <p id="notice"><%= notice %></p>
 
+<!-- Fuer die Uebersichtlichkeit ausgelagerte einzelne Panels -->
 
-<div class="panel panel-default" id="mapedit" >
-    <div class="panel-heading">
-          <h2 class="panel-title">Eckdaten</h2>
-    </div>
-    <div class="panel-body">
-			<div class="row">
-        
-        <div class="col-sm-7">
-          <p>
-            <strong>Beobachtungs- / Ankunftszeit:</strong>
-            <%= @beobachtung.ankunft_zeit.to_formatted_s(:dmyz) %>
-          </p>
-          
-          <p>
-            <strong>Abfahrtszeit:</strong>
-            <%= @beobachtung.abfahrt_zeit.to_formatted_s(:dmyz) %>
-          </p>
-          
-          <p>
-            <strong>Ort:</strong>
-            <%= @beobachtung.ort %>
-          </p>
-          
-          <p>
-            <strong>Fahrtrichtung:</strong>
-            <%= @beobachtung.fahrtrichtung %>
-          </p>
-          
-          <p>
-            <strong>Quelle:</strong>
-            <%= @beobachtung.quelle %>
-          </p>
+<%= render "show_eckdaten", beobachtung: @beobachtung %>
 
-          <p>
-            <strong>Email:</strong>
-            <%= @beobachtung.email %>
-          </p>
-          
-        </div>
-        
-        <div class="col-sm-5">
-          <% if @beobachtung.lat? && @beobachtung.lon? %>
-            <div id="map" style="height:200px;"></div>
-            <%= map(:center => { :latlng => [@beobachtung.lat, @beobachtung.lon], :zoom => 10 }) %>
-          <% end %>
-        </div>
-            
-      </div>
-    </div>
-</div>
- 
-<div class="panel panel-default" id="mapedit" >
-    <div class="panel-heading">
-      <h2 class="panel-title">Beschreibung</h2>
-    </div>
-    <div class="panel-body">
-			<div class="row">
-        
-        <div class="col-sm-6">
-          <p>
-            <strong>Verkehrstraeger:</strong>
-            <%= @beobachtung.verkehrstraeger %>
-          </p>
-          <p>
-            <strong>Container beschreibung:</strong>
-            <%= @beobachtung.container_beschreibung %>
-          </p>
+<%= render "show_beschreibung", beobachtung: @beobachtung %>
 
-          <p>
-            <strong>Anzahl container:</strong>
-            <%= @beobachtung.anzahl_container %>
-          </p>
-
-          <% case @beobachtung.verkehrstraeger %>
-          <% when "LKW" then %>
-            <p>
-              <strong>Anzahl lkw:</strong>
-              <%= @beobachtung.anzahl_lkw %>
-            </p>
-            
-            <p>
-              <strong>Kennzeichen lkw:</strong>
-              <%= @beobachtung.kennzeichen_lkw %>
-            </p>
-            
-            <p>
-              <strong>Lkw beschreibung:</strong>
-              <%= @beobachtung.lkw_beschreibung %>
-            </p>
-
-          <% when "Zug" then %>
-            <p>
-              <strong>Lok Beschreibung:</strong>
-              <%= @beobachtung.lok_beschreibung %>
-            </p>
-            <p>
-              <strong>Zug beschreibung:</strong>
-              <%= @beobachtung.zug_beschreibung %>
-            </p>
-          <% when "Schiff" then %>
-            <p>
-              <strong>Schiff name:</strong>
-              <%= @beobachtung.schiff_name %>
-            </p>
-            
-            <p>
-              <strong>Schiff beschreibung:</strong>
-              <%= @beobachtung.schiff_beschreibung %>
-            </p>
-          <% end %>
+<%= render "show_transportabschnitt", beobachtung: @beobachtung %>
 
 
-          <p>
-            <strong>Firma beschreibung:</strong>
-            <%= @beobachtung.firma_beschreibung %>
-          </p>
-          
-          <p>
-            <strong>Bewachung:</strong>
-            <% if @beobachtung.polizei %>
-              Mit Polizeibegleitung.
-            <% end %>
-            <% if @beobachtung.hubschrauber %>
-              Mit Hubschrauber begleitet.
-            <% end %>
-          </p>
-
-        </div>
-        
-        <div class="col-sm-6">
-          <h4>Kennzeichnung: </h4>
-          <%= render "stoffe/gefahr_tafel", gefahr_nummer: @beobachtung.gefahr_nummer, un_nummer: @beobachtung.un_nummer %>
-
-          <% if @beobachtung.kennzeichen_radioaktiv %>
-            <%= image_tag "radioaktiv.jpg", alt: "radioaktiv", size: "70x70" %>
-          <% end %>
-
-          <% if @beobachtung.kennzeichen_aetzend %>
-            <%= image_tag "aetzend.jpg", alt: "ätzend", size: "70x70" %>
-          <% end %>
-
-          <% if @beobachtung.kennzeichen_spaltbar %>
-            <%= image_tag "spaltbar.jpg", alt: "spaltbar", size: "70x70" %>
-          <% end %>
-
-          <% if @beobachtung.kennzeichen_umweltgefaehrdend %>
-            <%= image_tag "umweltgefaehrdend.jpg", alt: "umweltgefährdend", size: "70x70" %>
-          <% end %>
-          
-          <h4>Foto:</h4>
-          <p>
-            <strong>Foto:</strong>
-            <%= @beobachtung.foto %>
-          </p>
-
-        </div>
-        
-      </div>
-    </div>
-</div>
-
-<% if @beobachtung.transportabschnitt %>
-  <h3>Zugeordneter Transport</h3>
-  <% if @beobachtung.transportabschnitt.transport %>
-    <h4>Transportdaten</h4>
-    <%= render "transporte/show_transport_grunddaten", transport: @beobachtung.transportabschnitt.transport %>
-  <% end %>
-  <h4>Transportabschnitt</h4>
-  <%= render "transportabschnitte/show_abschnitt", :abschnitt => @beobachtung.transportabschnitt  %>
-
-  
-<% else %>
-
-  <h3>Mögliche Transportabschnitte:</h3>
-  
-  <% if @transportabschnitte.empty? %>
-    <p>
-      Es wurde kein von den Daten her passender Transportabschnitt gefunden.
-    </p>
-    <%= link_to 'Neuen Transportabschnitt anlegen', new_transportabschnitt_path(beobachtung_id: @beobachtung.id), class: "btn btn-primary" %>
-
-  <% else %>
-
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Startdatum</th>
-            <th>Endatum</th>
-            <th>Start</th>
-            <th>Ziel</th>
-            <th>Stoff</th>
-            <th colspan="2"></th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @transportabschnitte.each do |transportabschnitt| %>
-            <tr>
-              <td> <%= transportabschnitt.start_datum %></td>
-              <td> <%= transportabschnitt.end_datum %></td>
-              <td> <%= transportabschnitt.start_ort %></td>
-              <td> <%= transportabschnitt.end_ort %></td>
-              <td> <%= transportabschnitt.transport ? transportabschnitt.transport.stoff : nil %></td>
-              <td><%= link_to 'Show', transportabschnitt %></td>
-              <td><%= link_to 'Zuordnen', abschnitt_zuordnen_beobachtung_path(@beobachtung, abschnitt: transportabschnitt.id) %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-  <% end %>
-  
-<% end %>
